--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -29,6 +30,9 @@ android {
 }
 
 dependencies {
+
+    implementation platform(libs.firebase.bom)
+    implementation libs.firebase.auth
 
     implementation libs.appcompat
     implementation libs.material
