google sign in (prompt only) manual works.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,17 @@ dependencies {
 
     implementation platform(libs.firebase.bom)
     implementation libs.firebase.auth
+    implementation(libs.google.firebase.auth)
+    implementation libs.credentials
+    implementation libs.credentials.play.services.auth
+    implementation libs.googleid
+
+    implementation libs.com.google.firebase.firebase.auth
+    implementation libs.credentials.v100
+    implementation libs.play.services.auth
+    implementation libs.glide
+
+
 
     implementation libs.appcompat
     implementation libs.material
