--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
             android:name=".LoginActivity"
             android:exported="true"></activity>
         <activity
+            android:name=".SettingsActivity">
+        </activity>
+        <activity
+            android:name=".ProfileActivity">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
