--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Hackathon"
         tools:targetApi="31">
         <activity
+            android:name=".Rewards"
+            android:exported="false" />
+        <activity
             android:name=".Rating"
             android:exported="false" />
         <activity
@@ -29,8 +32,8 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
-        <activity android:name=".SettingsActivity"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".ProfileActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
